# Rebel_Bible_Bot

./: .gitignore  Dockerfile  amvera.yml  app.py  bot.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
