[project]
name = "rebel-bible-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "PaulNero",email = "58290662+PaulNero@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram (>=3.17.0,<3.18.0)",
    "python-dotenv (>=1.0.1,<1.1.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
